--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                 <button type="submit">Subscribe</button>
             </form>
     </div>
-    <img src="images/close.png"class="class-icon" onclick="closeModel()">
+    <img src="images/close.png" class="close-icon" onclick="closeModel()">
     </div>
 
     <script>
-       let modelBox = document.getElementById("modelBox"); 
+       let modelBox = document.getElementById("modelBox");
+
        document.onmouseleave = function(){
         modelBox.style.display = "block";
        }
